<resources>
    <string name="app_name">Parking Tracker</string>
    <string name="LoginHeader">Login</string>
    <string name="ButtonLoginCaption">Login</string>
    <string name="ButtonRegisterCaption">Register/SignUp</string>
    <string name="Username">Name</string>
    <string name="EmailPlaceholder" />
    <string name="NewRegisterCaption">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Map</string>
    <string name="UserProfileText">User Profile</string>
    <string name="ButtonSaveCaption">Save</string>
    <string name="NameText">Name</string>
    <string name="EmailText">Email</string>
    <string name="ContactText">Contact Number</string>
    <string name="CarPlateText">Car Plate Number</string>
    <string name="CityText">City</string>
    <string name="GoogleWelcomeText">Welcome</string>
    <string name="GoogleEditText">To complete sign in, we require additional information</string>
    <string name="GoogleSubmitButton">Submit</string>
    <string name="LoginPageHeader">ParkMe</string>
    <string name="SignUpOtherText">Dont have an Account</string>
    <string name="EmailAddressHeader">Email Address</string>
    <string name="CarCompanyHeader">Car Company</string>
    <string name="CarColorHeader">Car Color</string>
    <string name="HoursHeader">No. of Hours</string>
    <string name="AmountHeader">Amount</string>
    <string name="DateAndTImeHeader">Date and Time</string>
    <string name="PaymentModeHeader">Payment Mode</string>
    <string name="LotHeader">Lot Number</string>
    <string name="SpotHeader">Spot Number</string>
    <string name="ReceiptHeader">PARKING PAYMENT RECEIPT</string>
    <string name="ReportHeader">PARKING REPORT</string>
    <string name="ReportDetailHeader">DETAIL PARKING PAYMENT</string>
    <string name="EditButtonHeader">Edit</string>
    <string name="SupportHeader">ParkMe 24x7 Support</string>
    <string name="SupportSubHeader">Lambton College</string>
    <string name="SupportSubSubHeader">Toronto</string>
    <string name="CallButtonHeader">+1 647-774-2889</string>
    <string name="SMSButtonHeader">+1 416-774-9807</string>
    <string name="EmailButtonHeader">support@parkme.ca</string>

</resources>
