<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context="com.mad.android.parkingtracker.Activity.SupportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSupport"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/SupportHeader"
                android:gravity="top"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15dp"
                android:text="@string/SupportSubHeader"
                android:gravity="left"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15dp"
                android:text="@string/SupportSubSubHeader"
                android:gravity="left"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgCall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/ic_menu_call" />


        <Button
            android:id="@+id/btnCall"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CallButtonHeader"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSMS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/ic_menu_set_as" />

        <Button
            android:id="@+id/btnSMS"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/SMSButtonHeader"
            android:textColor="@android:color/background_light"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/sym_action_email" />

        <Button
            android:id="@+id/btnEmail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:text="@string/EmailButtonHeader"
            android:textColor="@android:color/background_light"/>
    </LinearLayout>

</LinearLayout>