<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtCarCompany"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.mad.android.parkingtracker.Activity.ParkingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Parking Payment Receipt"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/parkingTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EmailAddressHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parkingTxtEmailData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parkingTxtCarNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CarPlateText"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parkingTxtCarNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parkingTxtCarName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CarCompanyHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/parkingSpinCarCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/carName"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/parkingTxtCarColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CarColorHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/parkingSpinCarColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/carColor"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/parkingTxtNoHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/HoursHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/parkingEtNoHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="Enter Number of Hours"
                android:inputType="number"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/white" />

            <TextView
                android:id="@+id/parkingTxtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/AmountHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parkingTxtAmountData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parkingTxtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/DateAndTImeHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parkingTxtDateData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parkingTxtPaymentMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/PaymentModeHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/parkingSpinPaymentMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/paymentMethod" />

            <TextView
                android:id="@+id/parkingTxtLot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/LotHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/parkingSpinLot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/lots" />

            <TextView
                android:id="@+id/parkingTxtSpot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/SpotHeader"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/parkingSpinSpot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/spots" />

            <Button
                android:id="@+id/parkingBtnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/my_button_bg"
                android:text="@string/GoogleSubmitButton"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
