<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/loginTvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="serif"
        android:text="@string/LoginHeader"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginTvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTvHeader"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="@string/LoginPageHeader"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTvAppName"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/loginEtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEtEmail"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEtPassword"
        android:layout_marginTop="40dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/ButtonLoginCaption"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtnLogin"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="20dp"
        app:buttonSize="wide" />

    <TextView
        android:id="@+id/loginTvPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/google_sign_in"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="@string/SignUpOtherText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTvPlaceholder"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/ButtonRegisterCaption"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>