<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_weight="1"
            android:text="@string/CarPlateText"/>

        <TextView
            android:id="@+id/list_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_weight="1"
            android:text="ABCA"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_weight="1"
            android:text="@string/DateAndTImeHeader"/>

        <TextView
            android:id="@+id/list_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_weight="1"
            android:text="15-12-1204 12:54:12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_weight="1"
            android:text="@string/HoursHeader"/>

        <TextView
            android:id="@+id/list_no_of_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_weight="1"
            android:text="1"/>

    </LinearLayout>



</LinearLayout>