<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Activity.GoogleSignInExtraActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GoogleWelcomeText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/GoogleEditText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/registerExtraEtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="Enter Phone Number"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/registerExtraEtCatPlateNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="Enter Car Plate Number"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Spinner
        android:id="@+id/registerExtraSpinnerCity"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/cityArray" />

    <Button
        android:id="@+id/registerExtraBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/GoogleSubmitButton"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</LinearLayout>